# groupby

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CompileCommands.cmake  CompileOptions.cmake  Sanitize.cmake
src/: CMakeLists.txt  generate.cpp  group.cpp  main.cpp
src/groupby/: CMakeLists.txt  count.cpp  count.hpp  request.cpp  request.hpp  settings.cpp  settings.hpp
src/groupby/memory/: block.cpp  block.hpp  block_manager.cpp  block_manager.hpp
src/groupby/operations/: aggregate.cpp  aggregate.hpp  base.hpp  group.cpp  group.hpp  scan.cpp  scan.hpp  sort.cpp  sort.hpp
src/groupby/relation/: block.hpp  record.cpp  record.hpp  relation.hpp  value.cpp  value.hpp
src/groupby/utils/: data.cpp  data.hpp  string.cpp  string.hpp
src/wheels/: CMakeLists.txt  string.cpp  string.hpp
tests/: CMakeLists.txt  test_main.cpp
tests/groupby/: aggregate_test.cpp  data.cpp  data.hpp  group_test.cpp  scan_test.cpp  sort_test.cpp  strings_tests.cpp
tests/wheels/: strings_tests.cpp
